--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.54.2",
+    "sweetalert2": "^11.26.3",
     "tailwind-merge": "^2.6.0",
     "tw-animate-css": "1.3.0-canary.1",
     "zod": "^3.24.1"
