--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dexie": "^4.0.1",
+    "dexie-react-hooks": "^1.1.7",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.469.0",
     "next": "^16.0.7",
@@ -32,6 +34,7 @@
     "sweetalert2": "^11.26.3",
     "tailwind-merge": "^2.6.0",
     "tw-animate-css": "1.3.0-canary.1",
+    "uuid": "^10.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -41,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
