--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@stripe/stripe-js": "^8.6.1",
     "@tanstack/react-query": "^5.62.15",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
